set the zookeeper operation in thread-safe mode.